fixing vh on mobile

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -4,10 +4,10 @@ body {
   font-family: 'Fira Code', monospace;
   width: 100%;
   overflow-x: hidden;
-  box-sizing: border-box; /* Add this */
+  box-sizing: border-box; 
 }
 html, body {
-  min-height: 100vh;
+  min-height: 405vh;
   margin: 0;
   padding: 0;
 }
@@ -100,7 +100,7 @@ html, body {
 /* Ensure the container holds the image and intro-box in position */
 .body-container {
   position: relative;
-  height : 415vh;
+  height : 405vh;
   background-image: url('./assets/image.png');
   background-position: center;
   background-size: cover;
